--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -837,7 +837,6 @@ background: linear-gradient(
 li.active {
   /* border-bottom: 2px solid transparent; */
   position: relative;
-
 }
 
 li.active::after {
@@ -1057,6 +1056,52 @@ background: -webkit-linear-gradient(
 
 .blueLink {
   @apply text-blue-600 cursor-pointer underline
+}
+
+
+/*///////////////////////////////////////////*/
+/* to set some overlay over the earth model */
+.earth-model {
+  position: relative;
+  mix-blend-mode: lighten;
+  z-index: 0;
+
+}
+
+.earth-model::after {
+  content: "";
+  display: block;
+  position: absolute;
+  /* background: #0044ff0f; */
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  /* background: rgb(0,0,0); */
+background: linear-gradient(
+  0deg, 
+  rgba(0, 2, 10, 1) 0%,
+  rgba(0, 2, 23, 1) 3%, 
+  rgba(0, 13, 132, 0.15) 10%, 
+  rgba(0, 13, 132, 0.12) 15%, 
+   rgba(0, 68, 255, 0.075) 100%);
+   z-index:0;
+
+} 
+
+.earth_ambient {
+  background-color: rgba(0, 13, 132, 0.09);
+}
+
+.no_select {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari, Chrome, Opera, Samsung */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Edge, IE */
+  user-select: none; /* Modern browsers */
+  pointer-events: none;
+
 }
 
 
