--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -182,6 +182,51 @@ background: linear-gradient(
   }
 }
 
+.fadeOut_animation {
+  animation-name: fadeOut_keyframe;
+  animation-duration: 0.6s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut_keyframe {
+  0% { 
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+/*/////////////////// preloader /////////////////////*/
+/*//////////////////////////////////////////////////*/
+
+body {
+  cursor: wait;
+}
+
+.introduction {
+  height: 100vh;
+  width: 100vw;
+  background-color: #020812;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+}
+
+.introduction {
+  font-size: 42px;
+}
+
+
+
 /*///////////////////////////////////////////*/
 /*///////////////////////////////////////////*/
 
@@ -830,6 +875,59 @@ background: linear-gradient(
 }
 
 
+/* ////////////////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////////////////////////////////////////// */
+
+.extra1_card_bg {
+  /* background: -webkit-linear-gradient(#eee, #333); */
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom, rgba(255,255,255, 0.045), rgba(255,255,255, 0.025)
+  ); 
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom, rgba(255,255,255, 0.045), rgba(255,255,255, 0.025)
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  border-color: rgba(255,255,255, 0.07);
+  
+
+}
+
+.extra1_card_bg:hover, .extra1_card_bg:focus {
+  /* background: -webkit-linear-gradient(#eee, #333); */
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom, rgba(255,255,255, 0.055), rgba(255,255,255, 0.035)
+  ); 
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom, rgba(255,255,255, 0.055), rgba(255,255,255, 0.035)
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  border-color: rgba(255,255,255, 0.08);
+}
+
+.extra1_card_bg:hover #extra1_card_desc{
+  opacity: 70;
+}
+
+.radialContainer{
+  /* z-index: 1;
+  position: absolute;
+  height: 100%;
+  width:100%;
+  background: linear-gradient(to bottom, rgb(123, 8, 255, 0.9), rgb(123, 8, 255,0.87));
+  mix-blend-mode:screen; */
+}
+.bgImage{
+  /* z-index: 0; */
+  filter: 
+  drop-shadow(-1px 0px 0px rgb(0, 80, 170))
+  drop-shadow(1px 0px 0px rgb(0, 80, 170))
+  drop-shadow(0px -1px 0px rgb(0, 80, 170))
+  drop-shadow(0px 1px 0px rgb(0, 80, 170));
+}
 
 /* ////////////////////////////////////////////////////////////////////////////// */
 /* ////////////////////////////////////////////////////////////////////////////// */
@@ -1004,6 +1102,7 @@ background: -webkit-linear-gradient(
   transform: translate(-50%, 0%);
 }
 
+/* email confirm,  */
 .centered_centered2 {
   position: absolute;
   top: 50%;
