Add an extra2 (qoutes) & extra3 (why choose me) components to the homepage

--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -1133,7 +1133,7 @@ background: -webkit-linear-gradient(
 }
 
 .mainText_padding_left{
-  @apply pl-[7rem]
+  @apply px-[7rem]
 }
 
 .lightHeader {
