--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -1209,7 +1209,73 @@ background: -webkit-linear-gradient(
   transition: background-color 100ms linear;
 }
 
+/*////////////////////////////////////////////////////////////*/
+/* projects page */
 
+
+.rotate_x {
+  transform: perspective(500px) rotateX(20deg);
+}
+
+.belowGlow {
+  transform: perspective(500px) rotateX(20deg);
+}
+
+.projectIcons_overlay {
+  position: relative;
+  mix-blend-mode: lighten;
+  z-index: 0;
+
+}
+
+.projectIcons_overlay::after {
+  content: "";
+  display: block;
+  position: absolute;
+  /* background: #0044ff0f; */
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  /* background: rgb(0,0,0); */
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, 
+    rgba(2,8,18,1) 0%,
+    rgba(2,8,18,0.6) 10%,
+    rgba(2,8,18, 0.5) 15%,
+    rgba(2,8,18, 0.4) 25%,
+    rgba(2,8,18, 0.3) 30%,
+    rgba(2,8,18, 0.15) 35%,
+    rgba(2,8,18, 0.1) 45%,
+   
+    rgba(2,8,18, 0) 100%);
+   z-index:0;
+
+} 
+
+/* neon */
+/* .projectIcons_overlay::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, 
+    rgba(2,8,18,1) 0%,
+    rgba(2,8,18,0.9) 10%,
+    rgba(2,8,18, 0.8) 15%,
+    rgba(2,8,18, 0.6) 25%,
+    rgba(2,8,18, 0.5) 30%,
+    rgba(2,8,18, 0.45) 35%,
+    rgba(2,8,18, 0.4) 45%,
+   
+    rgba(2,8,18, 0) 100%);
+   z-index:0;
+
+}  */
 
 
 /* /////////////////////////////////////////////////////////////////////////////////////////// */
