--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -997,7 +997,7 @@ li.active::after {
 /* about containers */
 .glass_background {
   background: rgba(255, 255, 255, 0.05);
-  border-radius: 16px;
+  /* border-radius: 16px; */
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -1209,6 +1209,35 @@ background: -webkit-linear-gradient(
   transition: background-color 100ms linear;
 }
 
+
+.image_scaleIn_animation {
+
+  animation: scaleIn 0.5s forwards linear;
+  scale:1;
+
+}
+
+@keyframes scaleIn { 
+  0%{scale:1}
+  100%{scale:1.025}
+}
+
+.image_scaleOut_animation {
+
+  animation: scaleOut 0.5s forwards linear;
+  scale:1.025;
+
+}
+
+@keyframes scaleOut { 
+  0%{scale:1.025}
+  100%{scale:1}
+}
+
+
+
+
+
 /*////////////////////////////////////////////////////////////*/
 /* projects page */
 
@@ -1285,6 +1314,32 @@ background: -webkit-linear-gradient(
 }
 
 
+.projectIcons_overlay2 {
+  position: relative;
+  mix-blend-mode: lighten;
+  z-index: 0;
+
+}
+
+.projectIcons_overlay2::after {
+  content: "";
+  display: block;
+  position: absolute;
+  /* background: #0044ff0f; */
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  /* background: rgb(0,0,0); */
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, 
+    rgba(2,8,18,1) 0%,   
+    rgba(2,8,18, 0.7) 100%);
+   z-index:0;
+
+} 
+
+
 /* /////////////////////////////////////////////////////////////////////////////////////////// */
 
 
@@ -1294,7 +1349,7 @@ background: -webkit-linear-gradient(
 
 
 .ambientBackground {
-  @apply bg-[#020812]
+  @apply bg-[hsl(218,80%,4%)]
 }
 .gradientRoundButton {
   @apply rounded-[1rem]  bg-gradient-to-r from-[#387ca4] to-[#39d0b7b4]
