--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -1044,6 +1044,8 @@ li.active::after {
 
 /* /////////////////////////////////////////////////////////////////////////////////////////// */
 /* about containers */
+
+/* used in other components */
 .glass_background {
   background: rgba(255, 255, 255, 0.05);
   /* border-radius: 16px; */
@@ -1052,6 +1054,28 @@ li.active::after {
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.07);
 
+}
+
+
+.glass_background_about {
+  background: rgba(2,8,18,0.8);
+  /* border-radius: 16px; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+@media screen and (min-width: 1024px) {
+  .glass_background_about {
+
+    background: rgba(255, 255, 255, 0.05);
+  /* border-radius: 16px; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.07);
+  }
 }
 
 .button_background {
@@ -1461,7 +1485,7 @@ background: -webkit-linear-gradient(
 
 
 .ambientBackground {
-  @apply bg-[hsl(218,80%,4%)]
+  @apply bg-[rgb(2,8,18)]
 }
 .gradientRoundButton {
   @apply rounded-[1rem]  bg-gradient-to-r from-[#387ca4] to-[#39d0b7b4]
