--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -101,7 +101,6 @@ img {
 }
 
 
-
 /*///////////////////////////////////////////*/
 /* to set some overlay over the earth model */
 .earth-model {
@@ -1474,7 +1473,7 @@ background: -webkit-linear-gradient(
 
 }
 
-.placeHolder {
+/* .placeHolder {
 
  animation: placeHolder 2s infinite;
  opacity: 0;
@@ -1486,7 +1485,7 @@ background: -webkit-linear-gradient(
   0%{opacity: 0;}
   50%{opacity: 1;}
   100%{opacity: 0;}
-}
+} */
 
 
 /* /////////////////////////////////////////////////////////////////////////////////////////// */
@@ -1620,6 +1619,22 @@ background: linear-gradient(
 }
 
 
+/* ///////////////////////// @Nav */
+
+#main_navigation {
+  background: rgba(255, 255, 255, 0);
+}
+
+@media (max-width: 500px) {
+  #main_navigation {
+    background: rgba(255, 255, 255, 0);
+    background: 
+    linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, 
+    rgba(2,8,18,0.6) 65%, 
+    rgba(2,8,18,0.8211659663865546) 100%);
+  }
+
+}
 
 
 
