--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -1473,11 +1473,12 @@ background: -webkit-linear-gradient(
 
 }
 
-/* .placeHolder {
+.placeHolder {
 
  animation: placeHolder 2s infinite;
  opacity: 0;
  animation-delay: 5s;
+ animation-timing-function: cubic-bezier(.4,.55,1,.89);
 
 }
 
@@ -1485,7 +1486,7 @@ background: -webkit-linear-gradient(
   0%{opacity: 0;}
   50%{opacity: 1;}
   100%{opacity: 0;}
-} */
+}
 
 
 /* /////////////////////////////////////////////////////////////////////////////////////////// */
