--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -1616,8 +1616,175 @@ background: linear-gradient(
     height: 60vh;
   }
 
+}
+
+/* ///////////////////////// @Home/Tech */
+
+#homeTech_container {
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#homeTech_title {
+  width: 100%;
+  height: 10%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem ;
+}
+
+#homeTech_icons {
+  width: 100%;
+  height: 10%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+#homeTech_caret1, #homeTech_caret2 {
+  rotate: 270deg;
+}
+
+
+
+#homeTech_textModels_container {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#homeTech_text {
+  width: 100%;
+  flex:1;
+  padding: 1rem min(5vw,3rem) 0 min(5vw,3rem);
 
 }
+
+#homeTech_models {
+  width: 100%;
+  height: 50vw;
+  min-height: 30%;
+
+}
+
+
+@media (max-width: 450px) {
+  #homeTech_magnifyButton {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+  }
+}
+
+#homeTech_magnifyButton {
+  position: absolute;
+  bottom: 5%;
+  right: calc(50%-2rem);
+}
+
+
+@media (orientation: landscape) {
+
+  #homeTech_title {
+    width: 100%;
+    height: 15%;
+
+    /* justify-content: flex-end; */
+    padding-bottom: 1rem;
+
+  }
+  
+  #homeTech_icons {
+    width: 100%;
+    height: 15%;
+  }
+
+ 
+
+
+  #homeTech_textModels_container {
+    flex-direction: row;
+  }
+  
+  #homeTech_text {
+    width: 50%;
+    height: 100%;
+  
+  }
+  
+  #homeTech_models {
+    width: 50%;
+    height: 100%;
+  
+  }
+
+  @media (min-width: 1536px) {
+
+    #homeTech_container {
+      flex-direction: row;
+      flex-wrap: wrap;
+      max-height: 750px;
+      border: 1px solid white;
+      width: 80vw;
+      margin: 0 auto;
+
+
+    }
+
+    #homeTech_title {
+      width: 100%;
+      height: 10%;
+      border: 1px solid white;
+
+    }
+
+    #homeTech_projectsLink {
+      position: absolute;
+      right: -10rem;
+      top: 0;
+      height: 100%;
+      border: 1px solid white;
+    }
+
+    #homeTech_icons {
+      width: 10%;
+      height: 90%;
+      
+      max-width: 100px;
+      max-height: 500px;
+      flex-direction: column;
+      /* margin: auto 0; */
+    }
+
+    #homeTech_caret1, #homeTech_caret2 {
+      rotate: 0deg;
+    }
+
+    #homeTech_icons_projects {
+      flex-direction: column;
+    }
+
+    #homeTech_textModels_container {
+      flex: 1;
+      height: 90%;
+      flex-direction: row;
+    }
+
+   }
+
+}
+
 
 
 /* ///////////////////////// @Nav */
